# python-conohadnsclient

./: README.rst  conoha-dns-json.patch  diff.diff  setup.cfg  tox.ini
conohadnsclient/: .__init__.py.swp  client.py  shell.py  version.py
conohadnsclient/cli/: zones_v2.py
conohadnsclient/osc/: plugin.py
conohadnsclient/v1/: __init__.py
doc/fokr-plans/: conohadns-client-v1-support.md
mac-py27-venv-designateclient/resources/schemas/v1/: domain.json  server.json
