[metadata]
name = python-conohadnsclient
summary = conohadns based on OpenStack DNS as a Service - Client
description-file =
    README.rst
license = Apache License, Version 2.0
author = Naoto Gohko
author-email = naoto.gohko@coha.tw
home-page = https://github.com/naototty/python-conohadnsclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Internet :: Name Service (DNS)

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    conohadnsclient
scripts =
    bin/conohadns

[entry_points]
conohadnsclient.v1.controllers =
    reports = conohadnsclient.v1.reports:ReportsController
    diagnostics = conohadnsclient.v1.diagnostics:DiagnosticsController
    domains = conohadnsclient.v1.domains:DomainsController
    records = conohadnsclient.v1.records:RecordsController
    servers = conohadnsclient.v1.servers:ServersController
    quotas = conohadnsclient.v1.quotas:QuotasController
    sync = conohadnsclient.v1.sync:SyncController
    touch = conohadnsclient.v1.touch:TouchController

conohadnsclient.v2.controllers =
    zone = conohadnsclient.v2.zones:ZonesController

conohadnsclient.cli =
    domain-list = conohadnsclient.cli.domains:ListDomainsCommand
    domain-get = conohadnsclient.cli.domains:GetDomainCommand
    domain-create = conohadnsclient.cli.domains:CreateDomainCommand
    domain-update = conohadnsclient.cli.domains:UpdateDomainCommand
    domain-delete = conohadnsclient.cli.domains:DeleteDomainCommand
    domain-servers-list = conohadnsclient.cli.domains:ListDomainServersCommand

    record-list = conohadnsclient.cli.records:ListRecordsCommand
    record-get = conohadnsclient.cli.records:GetRecordCommand
    record-create = conohadnsclient.cli.records:CreateRecordCommand
    record-update = conohadnsclient.cli.records:UpdateRecordCommand
    record-delete = conohadnsclient.cli.records:DeleteRecordCommand

    server-list = conohadnsclient.cli.servers:ListServersCommand
    server-get = conohadnsclient.cli.servers:GetServerCommand
    server-create = conohadnsclient.cli.servers:CreateServerCommand
    server-update = conohadnsclient.cli.servers:UpdateServerCommand
    server-delete = conohadnsclient.cli.servers:DeleteServerCommand

    diagnostics-ping = conohadnsclient.cli.diagnostics:PingCommand

    sync-all = conohadnsclient.cli.sync:SyncAllCommand
    sync-domain = conohadnsclient.cli.sync:SyncDomainCommand
    sync-record = conohadnsclient.cli.sync:SyncRecordCommand

    touch-domain = conohadnsclient.cli.touch:TouchDomainCommand

    report-count-all = conohadnsclient.cli.reports:CountsCommand
    report-count-domains = conohadnsclient.cli.reports:DomainCountCommand
    report-count-records = conohadnsclient.cli.reports:RecordCountCommand
    report-count-tenants = conohadnsclient.cli.reports:TenantCountCommand
    report-tenants-all = conohadnsclient.cli.reports:TenantsCommand
    report-tenant-domains = conohadnsclient.cli.reports:TenantCommand

    quota-get = conohadnsclient.cli.quotas:GetQuotaCommand
    quota-update = conohadnsclient.cli.quotas:UpdateQuotaCommand
    quota-reset = conohadnsclient.cli.quotas:ResetQuotaCommand

    zone-import = conohadnsclient.v2.cli.zones:CreateZoneCommand
    zone-export = conohadnsclient.v2.cli.zones:ShowZoneCommand

conohadnsclient.versions =
    1 = conohadnsclient.v1:Client
    2 = conohadnsclient.v2.client:Client

openstack.cli.extension =
    conohadns = conohadnsclient.osc.plugin

openstack.conohadns.v2 =
    zone_blacklist_create = conohadnsclient.v2.cli.blacklists:CreateBlacklistCommand
    zone_blacklist_list = conohadnsclient.v2.cli.blacklists:ListBlacklistsCommand
    zone_blacklist_show = conohadnsclient.v2.cli.blacklists:ShowBlacklistCommand
    zone_blacklist_set = conohadnsclient.v2.cli.blacklists:SetBlacklistCommand
    zone_blacklist_delete = conohadnsclient.v2.cli.blacklists:DeleteBlacklistCommand

    tld_create = conohadnsclient.v2.cli.tlds:CreateTLDCommand
    tld_list = conohadnsclient.v2.cli.tlds:ListTLDsCommand
    tld_show = conohadnsclient.v2.cli.tlds:ShowTLDCommand
    tld_set = conohadnsclient.v2.cli.tlds:SetTLDCommand
    tld_delete = conohadnsclient.v2.cli.tlds:DeleteTLDCommand

    zone_create = conohadnsclient.v2.cli.zones:CreateZoneCommand
    zone_list = conohadnsclient.v2.cli.zones:ListZonesCommand
    zone_show = conohadnsclient.v2.cli.zones:ShowZoneCommand
    zone_set = conohadnsclient.v2.cli.zones:SetZoneCommand
    zone_delete = conohadnsclient.v2.cli.zones:DeleteZoneCommand

    zone_abandon = conohadnsclient.v2.cli.zones:AbandonZoneCommand
    zone_axfr = conohadnsclient.v2.cli.zones:AXFRZoneCommand

    zone_transfer_request_create = conohadnsclient.v2.cli.zones:CreateTransferRequestCommand
    zone_transfer_request_list = conohadnsclient.v2.cli.zones:ListTransferRequestsCommand
    zone_transfer_request_show = conohadnsclient.v2.cli.zones:ShowTransferRequestCommand
    zone_transfer_request_set = conohadnsclient.v2.cli.zones:SetTransferRequestCommand
    zone_transfer_request_delete = conohadnsclient.v2.cli.zones:DeleteTransferRequestCommand
    zone_transfer_accept_request = conohadnsclient.v2.cli.zones:AcceptTransferRequestCommand
    zone_transfer_accept_show = conohadnsclient.v2.cli.zones:ShowTransferAcceptCommand

    recordset_create = conohadnsclient.v2.cli.recordsets:CreateRecordSetCommand
    recordset_list = conohadnsclient.v2.cli.recordsets:ListRecordSetsCommand
    recordset_show = conohadnsclient.v2.cli.recordsets:ShowRecordSetCommand
    recordset_set = conohadnsclient.v2.cli.recordsets:SetRecordSetCommand
    recordset_delete = conohadnsclient.v2.cli.recordsets:DeleteRecordSetCommand

    ptr_record_list = conohadnsclient.v2.cli.reverse:ListFloatingIPCommand
    ptr_record_show = conohadnsclient.v2.cli.reverse:ShowFloatingIPCommand
    ptr_record_set = conohadnsclient.v2.cli.reverse:SetFloatingIPCommand
    ptr_record_unset = conohadnsclient.v2.cli.reverse:UnsetFloatingIPCommand

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = conohadnsclient/locale
domain = conohadnsclient

[update_catalog]
domain = conohadnsclient
output_dir = conohadnsclient/locale
input_file = conohadnsclient/locale/conohadnsclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = conohadnsclient/locale/conohadnsclient.pot

[wheel]
universal = 1

